force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/HRCFSL_Offline_Product_Consumed__c.object-meta.xml
<CustomObject>
    <label>Offline Product Consumed</label>
    <nameField>
        <label>Offline Product Consumed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offline Products Consumed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>