force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Not_Found_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Not_Found_Part_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Found Part Number</label>
    <type>Checkbox</type>
</CustomField>