force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Part_Number__c</fullName>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>