force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Parts_Number_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Parts_Number_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Number Not Found</label>
    <type>Checkbox</type>
</CustomField>