force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Offline Products Consumed</relationshipLabel>
    <relationshipName>Offline_Products_Consumed</relationshipName>
    <type>Lookup</type>
</CustomField>