force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Quantity__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>