force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Root_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Root_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Related Offline Products Consumed (Root Work Order)</relationshipLabel>
    <relationshipName>Related_Offline_Products_Consumed1</relationshipName>
    <type>Lookup</type>
</CustomField>