force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Serial_Number_In__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Serial_Number_In__c</fullName>
    <label>Serial Number In</label>
    <length>80</length>
    <type>Text</type>
</CustomField>