force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Synced__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced</label>
    <type>Checkbox</type>
</CustomField>