force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/fields/HRCFSL_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Offline Products Consumed</relationshipLabel>
    <relationshipName>Offline_Products_Consumed</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>