force-app/main/default/objects/HRCFSL_Offline_Product_Consumed__c/validationRules/HRCFSL_Offline_Parts_Not_Found.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCFSL_Offline_Parts_Not_Found</fullName>
    <active>true</active>
    <errorConditionFormula>AND(HRCFSL_Not_Found_Part_Number__c ==True,
NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c ) )</errorConditionFormula>
    <errorMessage>Sync error: Part Number not found.</errorMessage>
</ValidationRule>